--- a/package.json
+++ b/package.json
@@ -11,15 +11,24 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.0.0",
+    "@angular/cdk": "^15.0.1",
     "@angular/common": "^15.0.0",
     "@angular/compiler": "^15.0.0",
     "@angular/core": "^15.0.0",
     "@angular/forms": "^15.0.0",
+    "@angular/material": "^15.0.1",
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@fortawesome/fontawesome-free": "^6.2.1",
+    "animate.css": "^4.1.1",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.2",
+    "moment": "^2.29.4",
+    "ngx-mask": "^15.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "wowjs": "^1.1.3",
     "zone.js": "~0.12.0"
   },
   "devDependencies": {
