--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,11 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "paths": {
+      "@lib/*" : ["./src/app/lib/*"],
+      "@http/*" : ["./src/app/http/*"]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
